# Package_Tests

A100_build_strategies_files/: setup_env_nvhpc_cuda13_a100.sh
package_P_traincuda_integrated_v3_clean/: A100_SERVER_BUILD.md  Makefile  README.md  README_A100_ARCH_BUILD.md  README_A100_SERVER_COMPILE.md  README_TRAINCUDA_RUNTIME.md  pyproject.toml  steps.txt
package_P_traincuda_integrated_v3_clean/cpp/: CMakeLists.txt
package_P_traincuda_integrated_v3_clean/cpp/include/: pomdp_backup_api.h
package_P_traincuda_integrated_v3_clean/cpp/src/: pomdp_backup_api.cu
package_P_traincuda_integrated_v3_clean/docs/: A100_SERVER_BUILD_QUICKSTART.md  INTEGRATED_V3_1_CLEAN_NOTES.md  INTEGRATED_V3_CLEAN_NOTES.md  SIMPLIFIED_NOTEBOOK_GUIDE.md  strategies_2_3_manual_and_admin_A100.md
package_P_traincuda_integrated_v3_clean/examples/: pomdop_agent_simplified_model.ipynb  pomdp_agent_simplified_model.ipynb  simplified_cuda_backend_usage.py
package_P_traincuda_integrated_v3_clean/python/olfnav_cuda_backend/: __init__.py  backend_ctypes.py  notebook.py  solver_bridge.py
package_P_traincuda_integrated_v3_clean/python/olfnav_cuda_notebook/: __init__.py  evaluation.py  fixes.py  visual.py
package_P_traincuda_integrated_v3_clean/scripts/: 31_build_backend_lib.sh  build_cuda_lib.sh
package_S_v2_pomdp_agent_training_style_allstates_fix3/: A100_SERVER_BUILD.md  README.md  README_A100_ARCH_BUILD.md  README_A100_SERVER_COMPILE.md  README_TRAINCUDA_RUNTIME.md  pyproject.toml
package_S_v2_pomdp_agent_training_style_allstates_fix3/cpp/: CMakeLists.txt
package_S_v2_pomdp_agent_training_style_allstates_fix3/cpp/include/: pomdp_backup_api.h
package_S_v2_pomdp_agent_training_style_allstates_fix3/cpp/src/: pomdp_backup_api.cu
package_S_v2_pomdp_agent_training_style_allstates_fix3/cpp/standalone_reference/: pomdp_naive_v2.cu  pomdp_v4_v2.cu  pomdp_v7_v2.cu  pomdp_v8_v2.cu
package_S_v2_pomdp_agent_training_style_allstates_fix3/docs/: POMDP_AGENT_TRAINING_STYLE_S_V2_ALLSTATES_FIX3.md
package_S_v2_pomdp_agent_training_style_allstates_fix3/examples/: pomdp_agent_training.ipynb  pomdp_agent_training_s_v2_cuda_allstates_fix3.ipynb  pomdp_agent_training_s_v2_cuda_allstates_fix3.py  pomdp_agent_training_s_v2_cuda_parity_diff.ipynb  pomdp_agent_training_s_v2_cuda_parity_diff_separated_full.ipynb  pomdp_agent_training_s_v2_cuda_parity_diff_v7_v8_full.ipynb  simplified_cuda_backend_usage.py
package_S_v2_pomdp_agent_training_style_allstates_fix3/python/olfnav_cuda_backend/: backend_ctypes.py  backup_reference.py  fsvi_cuda_loop.py  model_extractor.py  native_gpu.py  notebook.py  sparse_ell.py  validation.py
package_S_v2_pomdp_agent_training_style_allstates_fix3/python/olfnav_cuda_notebook/: __init__.py  evaluation.py  fixes.py  visual.py
package_S_v2_pomdp_agent_training_style_allstates_fix3/scripts/: 31_build_backend_lib.sh  build_cuda_lib.sh  check_cuda_lib_arch.sh  check_runtime_deps_a100.sh  strategy1_install_cmake_autobuild_a100.sh
