[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "olfnav-cuda-backend"
version = "0.1.0"
description = "In-process sparse CUDA backup backend scaffold for olfactory_navigation FSVI"
requires-python = ">=3.9"
dependencies = ["numpy"]

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]
