[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "olfnav-cuda-backend"
version = "0.2.0"
description = "Package S_v2 real-cuBLAS traincuda backend for olfactory_navigation FSVI notebooks"
requires-python = ">=3.9"
dependencies = ["numpy"]

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]
